cxx/src/rsffi/base.h

// client


typedef struct {
    bool owned;
    bool valid;

    bool headComplete;
    bool bodyComplete;

    uint16_t code;
    FfiSlice status;

    size_t headersLen;
    size_t headersCap;
    HeaderPair* headers;
    FfiSlice body;
} HttpResponse;
void tcp_connect(FfiFuture fut, char* addr); // resolves in FfiStream
void tcp_tls_connect(FfiFuture fut, char* addr, char* domain, char* alpns);            // resolves in FfiStream
void tcp_tls_connect_unverified(FfiFuture fut, char* addr, char* domain, char* alpns); // resolves in FfiStream
FfiReques http1_request_new(FfiStream stream, size_t bufsize);
uint8_t http_req_get_type(FfiReques req);
void http_req_set_header(FfiReques req, HeaderPair pair);
void http_req_add_header(FfiReques req, HeaderPair pair);
void http_req_del_header(FfiReques req, HeaderPair pair);
void http_req_set_method_str(FfiReques req, FfiSlice method);
void http_req_set_method_byte(FfiReques req, uint8_t method);
void http_req_set_path(FfiReques req, FfiSlice method);
void http_req_write(FfiFuture fut, FfiReques req, FfiSlice bytes);    // resolves in nothing
void http_req_send(FfiFuture fut, FfiReques req, FfiSlice bytes);     // nothing
void http_req_flush(FfiFuture fut, FfiReques req);                    // nothing
void http_req_read(FfiFuture fut, FfiReques req);             // nothing
void http_req_read_until_complete(FfiFuture fut, FfiReques req);      // nothing
void http_req_read_until_head_complete(FfiFuture fut, FfiReques req); // nothing
uint16_t http_response_get_status_code(FfiReques req);
FfiSlice http_response_get_status_msg(FfiReques req);
bool http_response_has_header(FfiReques req, FfiSlice name);
size_t http_response_has_header_count(FfiReques req, FfiSlice name);
FfiSlice http_response_get_first_header(FfiReques req, FfiSlice name);
FfiSlice http_response_get_header(FfiReques req, FfiSlice name, size_t index);
FfiSlice http_response_get_body(FfiReques req);
HttpResponse* http_req_get_ffires(FfiReques req);
void http_req_free_ffires(HttpResponse* res);
void http_req_free(FfiReques req);
void http1_websocket_strict(FfiFuture fut, FfiReques http);          // resolves in WebSocket
void http1_websocket_lazy(FfiFuture fut, FfiReques http);            // resolves in WebSocket
void http1_h2c_full(FfiFuture fut, FfiReques http);                  // resolves in Http2Session