cxx/src/rsffi/http2.h

typedef void* Http2Sess;
Http2Sess http2_new(FfiStream stream, size_t bufsize);
Http2Sess http2_new_client(FfiStream stream, size_t bufsize);
Http2Sess http2_new_server(FfiStream stream, size_t bufsize);
Http2Sess http2_with(FfiStream stream, size_t bufsize, uint8_t mode, bool strict, FfiSlice settings);
void http2_free(Http2Sess session);
void http2_read_preface(FfiFuture fut, Http2Sess session);               // resolves in bool
void http2_send_preface(FfiFuture fut, Http2Sess session);               // resolves in nothing
void http2_next(FfiFuture fut, Http2Sess session);                       // resolves in u32, or null
void http2_read_raw(FfiFuture fut, Http2Sess session);                   // resolves in FfiSlice
void http2_handle_raw(FfiFuture fut, Http2Sess session, FfiSlice frame); // resolves in u32, or null
int  http2_open_stream(Http2Sess session);