rust/src/definitions.rs

use core::slice;
use std::ffi::{c_char, c_void};
use std::marker::PhantomData;
use std::ptr;
use std::sync::{Arc, Mutex};
use std::task::{Poll, Waker};

#[repr(C)] pub struct FfiFuture<T = c_void, U = c_void> { _unused: [u8; 0], _phantom: PhantomData<T>, _phantom2: PhantomData<U> }
#[repr(C)] pub struct DynStream { _unused: [u8; 0], _phantom: PhantomData<c_void> }
#[repr(C)] pub struct DynHttpRequest { _unused: [u8; 0], _phantom: PhantomData<c_void> }
#[repr(C)] pub struct DynHttpSocket { _unused: [u8; 0], _phantom: PhantomData<c_void> }
#[repr(C)] pub struct DynH2Sess { _unused: [u8; 0], _phantom: PhantomData<c_void> }
#[repr(C)] pub struct DynWebSocket { _unused: [u8; 0], _phantom: PhantomData<c_void> }
#[repr(C)] pub struct TcpListener { _unused: [u8; 0], _phantom: PhantomData<c_void> }
#[repr(C)] pub struct SocketAddr { _unused: [u8; 0], _phantom: PhantomData<c_void> }

#[repr(C)]
#[derive(Debug)]
pub struct FfiSlice{
    pub owned: u16,
    pub len: usize,
    pub cap: usize,
    pub ptr: *const u8,
}

impl FfiSlice{
    #[inline]
    pub const fn ro_mem(&self) -> bool { self.owned == 0 }
    pub const fn host_owns(&self) -> bool { self.owned == 1 }
    pub const fn is_owned(&self) -> bool { self.owned == 2 }

    pub fn from_string(string: String) -> Self{
        let bytes = string.into_bytes();
        let ptr = bytes.as_ptr();
        let len = bytes.len();
        let cap = bytes.capacity();
        std::mem::forget(bytes);

        Self {
            owned: 2,
            len,
            cap,
            ptr,
        }
    }
    pub fn from_vec(vec: Vec<u8>) -> Self{
        let ptr = vec.as_ptr();
        let len = vec.len();
        let cap = vec.capacity();
        std::mem::forget(vec);

        Self {
            owned: 2,
            len,
            cap,
            ptr,
        }
    }
    pub const fn from_str(str_slice: &str) -> Self{
        let ptr = str_slice.as_ptr();
        let len = str_slice.len();

        Self {
            owned: 0,
            len,
            ptr,
            cap: len,
        }
    }
    pub const fn from_buf(slice: &[u8]) -> Self{
        let ptr = slice.as_ptr();
        let len = slice.len();

        Self {
            owned: 0,
            len,
            ptr,
            cap: len,
        }
    }

    pub const fn empty() -> Self{
        Self { len: 0, cap: 0, ptr: ptr::null(), owned: 0 }
    }

    pub fn free(self) {
        if self.is_owned() && self.ptr != ptr::null(){
            drop(self.to_vec());
        } 
        else if self.host_owns() && self.ptr != ptr::null() {
            unsafe { free_slice(self); }
        }
    }
    pub fn to_string(self) -> Option<String>{
        if !self.is_owned() {
            None
        }
        else {
            unsafe { Some(String::from_raw_parts(self.ptr as *mut u8, self.len, self.cap)) }
        }
    }
    pub fn to_vec(self) -> Option<Vec<u8>>{
        if !self.is_owned() { None }
        else{
            unsafe { Some(Vec::from_raw_parts(self.ptr as *mut u8, self.len, self.cap)) }
        }
    }
    pub fn to_owned(self) -> Self {
        if self.is_owned() { self }
        else {
            Self::from_vec(self.as_bytes().to_vec())
        }
    }
    pub const fn as_bytes(&self) -> &[u8]{
        unsafe { slice::from_raw_parts(self.ptr, self.len) }
    }
    pub const fn as_bytes_mut(&self) -> &mut [u8]{
        unsafe { slice::from_raw_parts_mut(self.ptr as *mut u8, self.len) }
    }
    pub const fn as_str(&self) -> Result<&str, core::str::Utf8Error> {
        str::from_utf8(self.as_bytes())
    }
    pub fn as_str_lossy(&self) -> std::borrow::Cow<'_, str>{
        String::from_utf8_lossy(self.as_bytes())
    }
    pub const unsafe fn as_bytes_static(&self) -> &'static [u8]{
        unsafe { slice::from_raw_parts(self.ptr, self.len) }
    }
    pub const unsafe fn as_bytes_mut_static(&self) -> &'static mut [u8]{
        unsafe { slice::from_raw_parts_mut(self.ptr as *mut u8, self.len) }
    }
}

unsafe impl Sync for FfiSlice{}
unsafe impl Send for FfiSlice{}

impl From<String> for FfiSlice{
    fn from(value: String) -> Self {
        Self::from_string(value)
    }
}
impl From<Vec<u8>> for FfiSlice{
    fn from(value: Vec<u8>) -> Self {
        Self::from_vec(value)
    }
}
impl From<&str> for FfiSlice{
    fn from(value: &str) -> Self {
        Self::from_str(value)
    }
}
impl From<&[u8]> for FfiSlice{
    fn from(value: &[u8]) -> Self {
        Self::from_buf(value)
    }
}
impl From<&String> for FfiSlice{
    fn from(value: &String) -> Self {
        Self::from_str(value)
    }
}
impl From<&Vec<u8>> for FfiSlice{
    fn from(value: &Vec<u8>) -> Self {
        Self::from_buf(value)
    }
}
impl Drop for FfiSlice{
    fn drop(&mut self) {
        unsafe {
            if self.is_owned() {
                drop(Vec::from_raw_parts(self.ptr as *mut u8, self.len, self.cap));
            }
        }
    }
}

pub trait ToFfiSlice {
    fn to_ffi_slice(self) -> FfiSlice;
}
pub trait AsFfiSlice {
    fn as_ffi_slice(&self) -> FfiSlice;
}
impl<I: Into<FfiSlice>> ToFfiSlice for I {
    fn to_ffi_slice(self) -> FfiSlice {
        self.into()
    }
}
impl<I: AsRef<[u8]>> AsFfiSlice for I {
    fn as_ffi_slice(&self) -> FfiSlice {
        self.as_ref().into()
    }
}


#[repr(C)]
#[derive(Debug)]
pub struct FfiHeaderPair{
    pub nam: FfiSlice,
    pub val: FfiSlice,
}
impl FfiHeaderPair{
    pub const fn new(name: &str, value: &str) -> Self {
        Self { nam: FfiSlice::from_str(name), val: FfiSlice::from_str(value) }
    }
    pub fn new_owned(name: String, value: String) -> Self {
        Self { nam: FfiSlice::from_string(name), val: FfiSlice::from_string(value) }
    }
}
impl From<(&str, &str)> for FfiHeaderPair {
    fn from(value: (&str, &str)) -> Self {
        FfiHeaderPair::new(value.0, value.1)
    }
}
impl From<(String, String)> for FfiHeaderPair {
    fn from(value: (String, String)) -> Self {
        FfiHeaderPair::new_owned(value.0, value.1)
    }
}

#[repr(C)]
#[derive(Debug)]
pub struct FfiResponse{
    pub owned: bool,
    pub valid: bool,

    pub head_complete: bool,
    pub body_complete: bool,

    pub code: u16,
    pub status: FfiSlice,

    pub headers_len: usize,
    pub headers_cap: usize,
    pub headers: *const FfiHeaderPair,
    pub body: FfiSlice,
}

#[repr(C)]
#[derive(Debug)]
pub struct FfiBundle{
    pub sock: *mut DynStream,
    pub addr: *const SocketAddr,
}

#[repr(C)]
#[derive(Debug)]
pub struct FfiClient{
    pub owned: bool,
    pub valid: bool,

    pub head_complete: bool,
    pub body_complete: bool,
    
    pub path: FfiSlice,
    pub method: u8,
    pub version: u8,
    pub method_str: FfiSlice,

    pub headers_len: usize,
    pub headers_cap: usize,
    pub headers: *const FfiHeaderPair,
    pub body: FfiSlice,

    pub host: FfiSlice,
    pub scheme: FfiSlice,
}

#[repr(C)]
#[derive(Debug)]
pub struct FfiDuoStream {
    pub one: *mut DynStream, // idk
    pub two: *mut DynStream, // 
}

#[repr(C)]
#[derive(Debug)]
pub struct FfiWsFrame{
    pub fin: bool,
    pub rsv: u8,
    pub opcode: u8,
    pub masked: bool,
    pub payload: FfiSlice,
}

#[repr(u8)]
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum FfiFutureStatus {
    Pending = 0,
    Success = 1,
    Error = 2,
}

#[repr(u8)]
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum Methods {
    Unknown = 0,
    Get = 1,
    Head = 2,
    Post = 3,
    Put = 4,
    Delete = 5,
    Connect = 6,
    Options = 7,
    Trace = 8,
}

#[repr(u8)]
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum Versions{
    Unknown = 0,
    Debug = 1,
    HTTP09 = 2,
    HTTP10 = 3,
    HTTP11 = 4,
    HTTP2 = 5,
    HTTP3 = 6,
}


unsafe extern "C" {
    pub unsafe fn tcp_connect(fut: *const FfiFuture<DynStream>, addr: *mut i8);
    pub unsafe fn tcp_tls_connect(fut: *const FfiFuture<DynStream>, addr: *mut i8, domain: *mut i8, alpns: *mut i8);
    pub unsafe fn tcp_tls_connect_unverified(fut: *const FfiFuture<DynStream>, addr: *mut i8, domain: *mut i8, alpns: *mut i8);

    pub unsafe fn http1_request_new(stream: *mut DynStream, bufsize: usize) -> *mut DynHttpRequest;
    pub unsafe fn http_req_get_type(http: *mut DynHttpRequest) -> u8;
    pub unsafe fn http_req_set_header(req: *mut DynHttpRequest, pair: FfiHeaderPair);
    pub unsafe fn http_req_add_header(req: *mut DynHttpRequest, pair: FfiHeaderPair);
    pub unsafe fn http_req_del_header(req: *mut DynHttpRequest, name: FfiSlice);
    pub unsafe fn http_req_set_method_str(req: *mut DynHttpRequest, method: FfiSlice);
    pub unsafe fn http_req_set_method_byte(req: *mut DynHttpRequest, method: u8);
    pub unsafe fn http_req_set_path(req: *mut DynHttpRequest, path: FfiSlice);
    pub unsafe fn http_req_write(fut: *const FfiFuture<c_void>, req: *mut DynHttpRequest, buf: FfiSlice);
    pub unsafe fn http_req_send(fut: *const FfiFuture<c_void>, req: *mut DynHttpRequest, buf: FfiSlice);
    pub unsafe fn http_req_flush(fut: *const FfiFuture<c_void>, req: *mut DynHttpRequest);
    pub unsafe fn http_req_read(fut: *const FfiFuture<c_void>, req: *mut DynHttpRequest);
    pub unsafe fn http_req_read_until_complete(fut: *const FfiFuture<c_void>, req: *mut DynHttpRequest);
    pub unsafe fn http_req_read_until_head_complete(fut: *const FfiFuture<c_void>, req: *mut DynHttpRequest);
    pub unsafe fn http_req_free(req: *mut DynHttpRequest);

    pub unsafe fn http_response_get_status_code(req: *mut DynHttpRequest) -> u16;
    pub unsafe fn http_response_get_status_msg(req: *mut DynHttpRequest) -> FfiSlice;
    pub unsafe fn http_response_has_header(req: *mut DynHttpRequest, name: FfiSlice) -> bool;
    pub unsafe fn http_response_has_header_count(req: *mut DynHttpRequest, name: FfiSlice) -> usize;
    pub unsafe fn http_response_get_first_header(req: *mut DynHttpRequest, name: FfiSlice) -> FfiSlice;
    pub unsafe fn http_response_get_header(req: *mut DynHttpRequest, name: FfiSlice, index: usize) -> FfiSlice;
    pub unsafe fn http_response_get_body(req: *mut DynHttpRequest) -> FfiSlice;
    pub unsafe fn http_req_get_ffires(req: *mut DynHttpRequest) -> *const FfiResponse;
    pub unsafe fn http_req_free_ffires(res: *const FfiResponse);

    pub unsafe fn http1_websocket_strict(fut: *const FfiFuture<DynWebSocket>, http: *mut DynHttpRequest);
    pub unsafe fn http1_websocket_lazy(fut: *const FfiFuture<DynWebSocket>, http: *mut DynHttpRequest);
    pub unsafe fn http1_h2c_full(fut: *const FfiFuture<DynH2Sess>, http: *mut DynHttpRequest);

    pub unsafe fn http2_new(stream: *mut DynStream, bufsize: usize) -> *const DynH2Sess;
    pub unsafe fn http2_new_client(stream: *mut DynStream, bufsize: usize) -> *const DynH2Sess;
    pub unsafe fn http2_new_server(stream: *mut DynStream, bufsize: usize) -> *const DynH2Sess;
    pub unsafe fn http2_with(stream: *mut DynStream, bufsize: usize, mode: u8, strict: bool, settings: FfiSlice) -> *const DynH2Sess;
    pub unsafe fn http2_free(session: *const DynH2Sess);

    pub unsafe fn http2_read_preface(fut: *const FfiFuture<bool>, session: *const DynH2Sess);
    pub unsafe fn http2_send_preface(fut: *const FfiFuture, session: *const DynH2Sess);
    pub unsafe fn http2_next(fut: *const FfiFuture<u32>, session: *const DynH2Sess);
    pub unsafe fn http2_read_raw(fut: *const FfiFuture<FfiSlice>, session: *const DynH2Sess);
    pub unsafe fn http2_handle_raw(fut: *const FfiFuture<u32>, session: *const DynH2Sess, frame: FfiSlice);
    pub unsafe fn http2_open_stream(session: *const DynH2Sess) -> u32;
